Fix logo stretch with align-self: flex-start

--- a/_extensions/muni-fss/muni-fss.scss
+++ b/_extensions/muni-fss/muni-fss.scss
@@ -111,7 +111,7 @@ $footer-height:   30px;
   .title-logo {
     height: 64px;
     width: auto;
-    display: block;
+    align-self: flex-start;
     flex-shrink: 0;
   }
 
